--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,3 +3,7 @@
 @import 'base/mixins';
 @import 'base/globales';
 @import 'base/utilidades';
+
+@import 'layout/_header.scss';
+@import 'layout/preguntas';
+@import 'layout/_footer.scss';
