--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,24 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
+@import url('/build/fonts/Myriad/MyriadProRegular.ttf');
 
 // Fuentes
-$fuente_principal: 'Lato', sans-serif;
+$fuente_principal: 'Myriad Pro', sans-serif;
 
 // Tamaño de Media Queries
 $telefono: 480px;
 $tablet: 768px;
 $desktop: 1024px;
 
-// Colores
-$negro: #000000;
-$amarillo: #E08709;;
-$verde: #71B100;
+// Colores  
+$Mostaza: #DAA846;;
+$Turqueza: #249CA6;
 $blanco: #FFFFFF;
-$gris: #e1e1e1;
-$grisOscuro: #333333;
+$Negro: #2C2C2C;
 
 $separacion: 5rem;
 
-// Fuentes
+// Grosor de las Fuentes
 $delgada: 300;
 $regular : 400;
 $bold: 700;
