--- a/src/scss/layout/_preguntas.scss
+++ b/src/scss/layout/_preguntas.scss
@@ -1,10 +1,11 @@
-.header{
-    h1{
-      font-weight: bold;
+.header {
+    h1 {
+        font-weight: bold;
     }
-    
-  }
-.pregunta-respuesta{
+
+}
+
+.pregunta-respuesta {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,72 +13,83 @@
     border-radius: 24px;
     color: $blanco;
     font-weight: 300px;
-    margin-top:10px;
-    
-    h2{
+    margin-top: 10px;
+
+    h2 {
         font-weight: bold;
     }
 }
 
-.fondo-mostaza{
-    border-radius: 16px;
-    height: auto;
-    background-color:$Mostaza;
-    margin: 10px;
-    padding: 10px;
+.fondo-mostaza {
+    background-color: $Mostaza;
+    
 }
 
+.fondo-turquesa {
+    background-color: $Turqueza;
+}
+
+.fondo-mostaza,
 .fondo-turquesa{
     border-radius: 16px;
     height: auto;
-    background-color: $Turqueza;
     margin: 10px;
     padding: 10px;
 }
 
-.btn_enviar{
-    //Esta parte se ejecuta para telefono
-  
-            input{
-                background-color: $Mostaza;
-                color: $blanco;
-                border: none;
-                border-radius: 24px;
-                width: 100%;
-                //Esta parte se ejecuta en el desktop y tablet
-                @include telefono{
-                    width: auto;
-                }
-                //hasta aquí
-                height: 40px;
-                padding: 0 20px;
-                margin: 10px 0;
-            }
-}
-
+.btn_enviar,
 .btn_salir{
-    //Esta parte se ejecuta para telefono
-            input{
-                background-color: $Turqueza;
-                color: $blanco;
-                border: none;
-                border-radius: 24px;
-                width: 100%;
-                @include telefono{
-                    width:auto;
-                }
-                height: 40px;
-                padding: 0 20px;
-                margin: 10px 0;
-               
-            }
+    input{
+        color: $blanco;
+        border: none;
+        border-radius: 24px;
+        height: 40px;
+        padding: 0 20px;
+        margin: 10px 0;
+        width: 100%;
+    }
+    :hover{
+        background-color:green;
+    }
 }
 
-.contenedor-consejo{
+.btn_enviar {
+    //Esta parte se ejecuta para telefono
+
+    input {
+        background-color: $Mostaza;
+       
+
+        //Esta parte se ejecuta en el desktop y tablet
+        @include telefono {
+            width: auto;
+        }
+    }
+}
+
+.btn_salir {
+
+    //Esta parte se ejecuta para telefono
+    input {
+        background-color: $Turqueza;
+        @include telefono {
+            width: auto;
+        }
+    }
+
+
+}
+
+.contenedor-consejo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: url(/build/img/AJ-EKJ23-FondoN.webp);
-    p{
+
+    p {
         color: $blanco;
     }
+
     border-radius: 16px;
     padding: 10px;
 }
@@ -98,7 +110,7 @@
     background-color: $Negro;
     margin: 15% auto;
     padding: 20px;
-    border:none;
+    border: none;
     border-radius: 24px;
     width: 80%;
     max-width: 600px;
@@ -111,6 +123,5 @@
     top: 0;
     right: 0;
     padding: 10px;
-    cursor: pointer;
     color: $blanco;
 }
